# hello

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  config.cmake.in  hello.cppm
.github/workflows/: build.yaml  ci.yml
cmake/: install-config.cmake  install-config.cmake.in  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/hello/: hello.hpp
source/: hello.cpp
test/: CMakeLists.txt
test/source/: hello_test.cpp
